gitops/apps/minio/mgmt/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-mgmt
spec:
  type: ClusterIP
  selector:
    app: minio-mgmt
  ports:
    - name: api
      port: 9000
      targetPort: api
    - name: console
      port: 9001
      targetPort: console
