gitops/apps/minio/mgmt/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-mgmt
  annotations:
    cert-manager.io/cluster-issuer: bealv-mgmt
    projectcontour.io/websocket-routes: /ws
  labels:
    probe: enabled
spec:
  rules:
    - host: "minio.bealv-mgmt.lan"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-mgmt
                port:
                  number: 9001
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: minio-mgmt
                port:
                  number: 9001
  tls:
    - hosts:
        - "minio.bealv-mgmt.lan"
      secretName: minio-mgmt-tls
